# cfcp

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.go
include/cfcp/: cfcp.hpp
src/cfcp/: cfcp.cpp  main.cpp
