cmake_minimum_required(VERSION 3.15 FATAL_ERROR)
project(cfcp LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED  on)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_FLAGS -fconcepts)

if(MSVC)
    add_compile_options("/W4" "$<$<CONFIG:RELEASE>:/O2>")
else()
    add_compile_options("-Wall" "-Wextra" "-Werror" "$<$<CONFIG:RELEASE>:-O3>")
endif()
add_library(cfcp src/cfcp/cfcp.cpp)
target_include_directories(cfcp PUBLIC include/cfcp)

add_executable(cfcp-bin src/cfcp/main.cpp)
target_link_libraries(cfcp-bin cfcp)
set_target_properties(cfcp-bin PROPERTIES OUTPUT_NAME cpfcp)
#target_include_directories(cfcp-bin include)
# add_executable(functional src/functional.cpp)
# add_executable(mtt  src/mtt.cpp)
# add_executable(crtp  src/crtp.cpp)
# add_executable(futures src/futures.cpp)
# add_executable(templates src/templates.cpp)
# add_executable(vectors src/vectors.cpp)
# add_executable(strings src/strings.cpp)
